tests/baselines/reference/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.errors.txt
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(5,18): error TS2339: Property 'from' does not exist on type 'ArrayConstructor'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(11,13): error TS2304: Cannot find name 'Map'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(18,5): error TS2339: Property 'name' does not exist on type '() => void'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(21,6): error TS2339: Property 'sign' does not exist on type 'Math'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(26,6): error TS2304: Cannot find name 'Symbol'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(30,18): error TS2304: Cannot find name 'Symbol'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(34,13): error TS2304: Cannot find name 'Proxy'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(37,1): error TS2304: Cannot find name 'Reflect'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(41,5): error TS2339: Property 'flags' does not exist on type 'RegExp'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(45,5): error TS2339: Property 'includes' does not exist on type 'string'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(48,9): error TS2304: Cannot find name 'Symbol'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts(52,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6FeaturesWithOnlyES5Lib.ts (12 errors) ====
    
    // All will be error from using ES6 features but only include ES5 library
    // Using Es6 array
    function f(x: number, y: number, z: number) {
        return Array.from(arguments);
                     ~~~~
!!! error TS2339: Property 'from' does not exist on type 'ArrayConstructor'.
    }
    
    f(1, 2, 3);  // no error
    
    // Using ES6 collection
    var m = new Map<string, number>();
                ~~~
!!! error TS2304: Cannot find name 'Map'.
    m.clear();
    // Using ES6 iterable
    m.keys();
    
    // Using ES6 function
    function Baz() { }
    Baz.name;
        ~~~~
!!! error TS2339: Property 'name' does not exist on type '() => void'.
    
    // Using ES6 math
    Math.sign(1);
         ~~~~
!!! error TS2339: Property 'sign' does not exist on type 'Math'.
    
    // Using ES6 object
    var o = {
        a: 2,
        [Symbol.hasInstance](value: any) {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return false;
        }
    };
    o.hasOwnProperty(Symbol.hasInstance);
                     ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
    // Using Es6 proxy
    var t = {}
    var p = new Proxy(t, {});
                ~~~~~
!!! error TS2304: Cannot find name 'Proxy'.
    
    // Using ES6 reflect
    Reflect.isExtensible({});
    ~~~~~~~
!!! error TS2304: Cannot find name 'Reflect'.
    
    // Using Es6 regexp
    var reg = new RegExp("/s");
    reg.flags;
        ~~~~~
!!! error TS2339: Property 'flags' does not exist on type 'RegExp'.
    
    // Using ES6 string
    var str = "Hello world";
    str.includes("hello", 0);
        ~~~~~~~~
!!! error TS2339: Property 'includes' does not exist on type 'string'.
    
    // Using ES6 symbol
    var s = Symbol();
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
    // Using ES6 wellknown-symbol
    const o1 = {
        [Symbol.hasInstance](value: any) {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return false;
        }
    }